# mcp-test-mcp

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_GUIDE.md  pyproject.toml
.claude/agents/: security-reviewer.md
.claude/commands/: release.md
.github/workflows/: publish.yml
briefs/: mcp-test-mcp-brief.md
docs/: README.md  stdio-python-interpreter-issue.md  usage.md
fastmcp-client-docs/: client-overview.md  prompts.md  repomix-output.xml  resources.md  tools.md  transports.md
fastmcp-client-docs/advanced_features/: elicitation.md  logging.md  messages.md  progress.md  roots.md  sampling.md
fastmcp-client-docs/authentication/: bearer.md  oauth.md
fastmcp-client-docs/patterns/: cli.md  decorating-methods.md  tool-transformation.md
fastmcp-server-docs/: overview.md  repomix-output.xml
fastmcp-server-docs/advanced_features/: context.md  elicitation.md  logging.md  middleware.md  progress.md  proxy_servers.md  sampling.md  server_composition.md
fastmcp-server-docs/core_components/: prompts.md  resources.md  tools.md
fastmcp-server-docs/deployment/: project_configuration.md  running.md  self_hosted.md
ideas/mcp-test-mcp/: README.md  connection-model.md  conversation-20251009-095705.md  next-steps.md  problem.md  requirements.md  research.md  tool-schemas.md  tool-verbosity-example.md  vision.md  workflow-example.md
node-wrapper/: .npmignore  README.md  index.js  mcp-test-mcp-0.1.3.tgz  package-lock.json  package.json
node-wrapper/python-src/: README.md  pyproject.toml
node-wrapper/scripts/: postinstall.js
project-management/: PROJECT-MANAGEMENT-RULES.md  README.md
project-management/backlog/: 20251009-0017-bearer-token-auth.md  20251009-0018-prometheus-metrics.md  20251009-0019-stdio-transport.md  20251009-0020-named-connections.md  20251009-0021-advanced-debugging.md  20251009-0022-performance-optimization.md  20251013-0023-verbose-mode.md  20251013-0024-test-server-function.md  README.md  fix-main-entry-point.md
project-management/done/: 20251009-0001-project-setup.md  20251009-0002-pydantic-models.md  20251009-0003-connection-manager.md  20251009-0004-fastmcp-server-setup.md  20251009-0005-connection-tools.md  20251009-0006-tool-testing-tools.md  20251009-0007-resource-testing-tools.md  20251009-0008-prompt-testing-tools.md  20251009-0009-test-fixtures.md  20251009-0010-unit-tests-connection.md  20251009-0011-unit-tests-tools.md  20251009-0012-integration-tests.md  20251009-0013-logging-implementation.md  20251009-0014-readme-documentation.md  20251009-0015-usage-guide.md  20251009-0016-claude-code-testing.md  IMPLEMENTATION_SUMMARY.md  fix-main-entry-point.md
project-management/in-progress/: 20251009-0016-claude-code-testing.md
project-management/scripts/: promote.sh
proposals/: mcp-test-mcp-proposal.md
retrospectives/2026-04-06_fastmcp-3x-planning/: RETRO.md
retrospectives/2026-04-06_v040-release/: RETRO.md
sketches/: mcp-test-mcp-sketch.md
src/mcp_test_mcp/: __main__.py  connection.py  mcp_instance.py  models.py  server.py
src/mcp_test_mcp/tools/: connection.py  llm.py  tools.py
tech-stack/: mcp-test-mcp-tech-stack.md
tests/: __init__.py  conftest.py  test_both_prompt_patterns.py  test_cli.py  test_connection.py  test_fixtures_example.py  test_integration.py  test_models.py  test_prompt_with_llm.py  test_server_integration.py  test_tools_connection.py  test_tools_prompts.py  test_tools_resources.py  test_tools_tools.py
(+11 files in other folders)
